DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>