DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <label>Credits</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
</CustomField>