DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Text</type>
    <length>5</length>
</CustomField>