DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Grade_Points__c.field-meta.xml
<CustomField>
    <fullName>Grade_Points__c</fullName>
    <label>Grade Points</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
</CustomField>