DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>