DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>