DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Enrollment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Lookup</type>
    <referenceTo>Demo_Student__c</referenceTo>
    <relationshipName>Enrollments</relationshipName>
    <relationshipLabel>Student</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>